# fastapi-demo

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: .flake8  pyproject.toml  requirements.txt
backend/app/: config.py  main.py  models.py
