[tool.poetry]
name = "fastapi-demo"
version = "0.1.0"
description = ""
authors = ["Vaibhav Pandey <vaibhavkumarpande@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.0"}
SQLAlchemy = "^2.0.32"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
